--- a/main.html
+++ b/main.html
@@ -8,42 +8,49 @@
   </head>
   <body>
     <div class="main">
-      <a href="index.html">
-        <!---- Header-->
-        <div class="header">
-          <h1>🍔 Kupa</h1>
-        </div>
+      <!---- Header-->
+      <div class="header">
+        <h1>🍔 Kupa</h1>
+      </div>
 
-        <div class="img-container">
+      <div class="img-container">
+        <img
+          src="https://res.cloudinary.com/dil9kylo3/image/upload/v1726313630/vtznjyzt91yv7hqtb1hd.png"
+          alt="Singapura Hainanese"
+          class="product-image"
+        />
+        <div class="img-1">
           <img
-            src="https://res.cloudinary.com/dil9kylo3/image/upload/v1726313630/vtznjyzt91yv7hqtb1hd.png"
-            alt="Singapura Hainanese"
-            class="product-image"
+            src="https://res.cloudinary.com/dil9kylo3/image/upload/v1726341888/bywsp7rfdzwebgjyygem.jpg"
+            alt=""
           />
-          <div class="img-1">
-            <img
-              src="https://res.cloudinary.com/dil9kylo3/image/upload/v1726341888/bywsp7rfdzwebgjyygem.jpg"
-              alt=""
-            />
-          </div>
-          <div class="img-2">
-            <img
-              src="https://res.cloudinary.com/dil9kylo3/image/upload/v1726273048/yiirv8udyzgirwvmjkyt.png"
-              alt=""
-            />
-          </div>
+        </div>
+        <div class="img-2">
+          <img
+            src="https://res.cloudinary.com/dil9kylo3/image/upload/v1726273048/yiirv8udyzgirwvmjkyt.png"
+            alt=""
+          />
+        </div>
 
-          <div class="img-3">
-            <img
-              src="https://res.cloudinary.com/dil9kylo3/image/upload/v1726273385/lqgtwyuna0xogpxjgtjr.png"
-              alt=""
-            />
-          </div>
+        <div class="img-3">
+          <img
+            src="https://res.cloudinary.com/dil9kylo3/image/upload/v1726273385/lqgtwyuna0xogpxjgtjr.png"
+            alt=""
+          />
         </div>
-        <div class="text">
-          <h1><span>All Your </span><br />Favorite Foods</h1>
-        </div>
-      </a>
+      </div>
+      <div class="container">
+        <h1>All your favorites foods</h1>
+        <p>Order your favorite menu with easy, on-demand delivery</p>
+        <div class="indicator"></div>
+      </div>
+
+      <button class="btn continue">
+        <a href="index.html">Continue</a>
+      </button>
+      <button class="btn signin">
+        <a href="index.html">Sign in</a>
+      </button>
     </div>
   </body>
 </html>
